--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+.header{
+    height:200px;
+    width:100%;
+    background-color:#E9EEF6;
+    padding:50px;
+}
+.header h3:hover{
+    color:red;
+    cursor:pointer;
+}
+.modalHeader{
+    color:rgb(73, 168, 5);
+    cursor:pointer;
+}
+.label{
+    color:rgb(243, 8, 8);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Card */
+.card-wrapper{
+    width: 270px;
+    height:200px;
+    box-shadow:0px 3px 50px #A5A5A5;
+    display:flex;
+    flex-direction:column;
+    margin-right:9px;
+    margin-bottom:30px;
+    border-radius:10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-top{
+    width:100%;
+    height:2%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.task-holder{
+    width:100%;
+    height:98%;
+    padding:10px 10px;
+    display:flex;
+    flex-direction:column;
+    position:relative;
 }
-
-.App-link {
-  color: #61dafb;
+.card-header{
+    margin-top:10px;
+    margin-bottom:10px;
+    max-width:100px;
+    height:30px;
+    padding:1px 1px !important;
+    text-align:center;
+    color:rgb(240, 88, 6);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-container{
+    height:70vh;
+    width:100%;
+    display:flex;
+    flex-wrap: wrap;
+    padding: 30px 30px;
+    justify-content:space-between;
+    justify-content:space-around;
+    align-items:center;
+    background-Color:#F6F7F8;
+}
+.far{
+    margin-right:20px;
+    font-size:20px;
+}
+.fas{
+    font-size:20px;
 }
